<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="arrow_back" translatable="false">arrow_back</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="link_to_the_course" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="letter_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="letter_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="developer_mail" translatable="false">master1origami@yandex.ru</string>
    <string name="practicum_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_string">Очистить</string>
    <string name="tools_track_name">Ооочеееень длиинное назвааааниииеее трееееекаааа</string>
    <string name="tools_band_name">Ооооооочень длииииииииииииннооооое название группы</string>
    <string name="tools_track_time" translatable="false">0:00</string>
    <string name="track_name_1" translatable="false">Smells Like Teen Spirit</string>
    <string name="track_name_2" translatable="false">Billie Jean</string>
    <string name="track_name_3" translatable="false">Stayin\' Alive</string>
    <string name="track_name_4" translatable="false">Whole Lotta Love</string>
    <string name="track_name_5" translatable="false">Sweet Child O\'Mine</string>
    <string name="band_name_1" translatable="false">Nirvana</string>
    <string name="band_name_2" translatable="false">Michael Jackson</string>
    <string name="band_name_3" translatable="false">Bee Gees</string>
    <string name="band_name_4" translatable="false">Led Zeppelin</string>
    <string name="band_name_5" translatable="false">Guns N\' Roses</string>
    <string name="track_time_1" translatable="false">5:01</string>
    <string name="track_time_2" translatable="false">4:35</string>
    <string name="track_time_3" translatable="false">4:10</string>
    <string name="track_time_4" translatable="false">5:33</string>
    <string name="track_time_5" translatable="false">5:03</string>
    <string name="track_poster_1" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="track_poster_2" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="track_poster_3" translatable="false">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="track_poster_4" translatable="false">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="track_poster_5" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
</resources>