<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LightOrDarkStyle"
    tools:ignore="UnusedAttribute">

    <TextView style="@style/App_Name_Design"
        android:text="@string/app_name" />

    <LinearLayout
        style="@style/LayoutBasic"
        android:layout_marginTop="32dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/search_button"
            style="@style/MainScreenButtonsDesign"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/library_button"
            style="@style/MainScreenButtonsDesign"
            android:text="@string/media_library"
            app:icon="@drawable/library" />

        <Button
            android:id="@+id/settings_button"
            style="@style/MainScreenButtonsDesign"
            android:text="@string/settings"
            app:icon="@drawable/settings" />

    </LinearLayout>
</LinearLayout>