<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4082ff"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="15dp"
    android:paddingBottom="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textSize="22sp"
        android:textColor="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media_library"
        android:textSize="22sp"
        android:textColor="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textSize="22sp"
        android:textColor="@color/black" />

</LinearLayout>
    </LinearLayout>
