<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/setting_layout_start_end_padding"
    android:paddingEnd="@dimen/setting_layout_start_end_padding">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_layout_top_bottom_padding"
            android:contentDescription="@string/arrow_back"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/ys_display_bold"
            android:letterSpacing="0"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/first_layout_text" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="@dimen/setting_layout_top_bottom_padding"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_regular"
            android:letterSpacing="0"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_items" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="46dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_layout_top_bottom_padding"
            android:layout_marginBottom="@dimen/setting_layout_top_bottom_padding"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_regular"
            android:letterSpacing="0"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_items"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/setting_layout_top_bottom_padding"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_layout_top_bottom_padding"
            android:layout_marginBottom="@dimen/setting_layout_top_bottom_padding"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_regular"
            android:letterSpacing="0"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_items" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:src="@drawable/support" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="359.42dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/hair" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="361dp"
            android:layout_marginTop="@dimen/support_eye"
            android:src="@drawable/eye" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="368dp"
            android:layout_marginTop="@dimen/support_eye"
            android:src="@drawable/eye" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_layout_top_bottom_padding"
            android:layout_marginBottom="@dimen/setting_layout_top_bottom_padding"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_regular"
            android:letterSpacing="0"
            android:text="@string/terms_of_use"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_items" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:src="@drawable/arrow_right" />
    </FrameLayout>

</LinearLayout>